# datafusion-regexp-extract-udf

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: regexp_extract.rs
docs/: COMPATIBILITY.md  PERFORMANCE.md  SEMANTICS.md  spark_group_by.md
examples/: df_api.rs  ping.rs
src/: config.rs  error.rs  eval.rs  kernel.rs  lib.rs  pattern_cache.rs  re.rs  types.rs  udf.rs
tests/: edge_cases.rs  fancy_regex_off.rs  fancy_regex_on.rs  integration_df_api.rs  unicode_and_nulls.rs
